tests/A2/reject/sameFuncName.ul
void main(){


}

int main(){
    return 2;
}